{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "player",
            "id": "7f3345d2-c144-4b61-b480-37e67272fff4",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "df8821d6-bb83-4032-bba0-2f66399b937f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "look",
                    "type": "Value",
                    "id": "0caa6e94-aa4e-45ee-8ccf-ff063d3ca577",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "sub_weapon",
                    "type": "Button",
                    "id": "5aaeace9-e7b6-439a-8294-9e89ae59b6ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "special_weapon",
                    "type": "Button",
                    "id": "e4e45fce-cd29-4973-94d0-a6c0fe64bddc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "nice",
                    "type": "Button",
                    "id": "5f670813-1af6-4b04-a202-dd3d8f794059",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "come_on",
                    "type": "Button",
                    "id": "43825254-d521-4358-9049-7aea36a9487b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "517798bb-ff0e-4489-89c8-7ae8f20e259a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "4a1f8414-8f8e-4700-93ae-4ced42a6ee1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "squid",
                    "type": "Button",
                    "id": "57b189f2-ff18-406a-9826-ae9b84ead086",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "special",
                    "type": "Button",
                    "id": "e6852312-e3d5-482a-a567-ca9f90e3a1f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "61f8f2da-df9a-4195-8fcc-49221d4f480c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bc61b8d0-69be-4b7f-93c5-5a69e4d4d651",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2f758661-57e8-49d9-9f29-2ca5d0f6bb36",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4e5dc57e-d56b-4a7c-8502-74d5976251ea",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b486316-d65b-434b-bf20-dbff5e1b876c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a4c1c157-2606-4dc0-8521-329cc71089ca",
                    "path": "<SwitchProControllerHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b26b72-518b-4004-a5da-7fe8e7ed0d7e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sub_weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24e6cc67-7b9b-4c07-8dbd-a14a05bb5bf8",
                    "path": "<SwitchProControllerHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sub_weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7492c1ec-90c0-482e-bb03-9a020b8746ea",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "nice",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2d2ad6c-132d-4842-85ba-5da1d727e418",
                    "path": "<SwitchProControllerHID>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "nice",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51edcbfc-fcef-42fe-8d4d-57d65a69ca15",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "come_on",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f890cd0-17bd-4fd9-95b3-0fe486303f2b",
                    "path": "<SwitchProControllerHID>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "come_on",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d410108e-9cc6-4d69-8a57-691c2c02aacb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "special_weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9cfb959-e9da-4b58-a82e-b0b4311c423f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebd6d8d9-1401-4d5c-b56f-b7c1f50b55d6",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce114a6d-6d05-46c5-96a2-744345c7f78d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf1d210d-d8b4-4c37-a305-e6c0a1ded7f4",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffdc372b-8740-4504-b364-1268b75cbd0e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c07059d-683a-406f-b965-035677ed8b25",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4db2b456-5a15-4a0d-9abb-d7a2ae1091bc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "squid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe9990f6-b582-43b1-8aa0-df62a3703d11",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "squid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1a28d72-47e9-4af4-ab8f-a8c3a9af7f84",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "special",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "setting",
            "id": "2a428a10-df40-4e68-a277-b51d3a1766ee",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e50501a2-2443-41c6-b8b1-867a219c89ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebc155a1-42ce-48f1-89ca-04026b1cdab3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}